Legg til klikkbart lenkepanel

--- a/src/components/Komponent.css
+++ b/src/components/Komponent.css
@@ -1,3 +1,15 @@
-.komponent {
-  text-align: center;
+.detail {
+  color: var(--a-text-default);
+  margin-block-end: var(--a-spacing-4) !important;
+}
+
+.heading {
+  margin-block-end: var(--a-spacing-2) !important;
+}
+
+.flex {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
 }
